@@ -295,7 +295,7 @@ form_proxysect=IP address and forwarding
 
 setup_err=Failed to create virtual server
 setup_evital=Critial feature $1 was not properly created - Virtual server creation halted.
-setup_edomain=Missing or invalid domain name - only letters, numbers and the following characters are allowed : . - _
+setup_edomain=Missing or invalid domain name - only letters, numbers and the dot, dash and underscore characters are allowed
 setup_edomain2=Domain names cannot start or end with a .
 setup_edomain3=The final component of a domain name cannot contain non-english letters
 setup_esubdomain=Invalid sub-domain name - no dots are allowed
@@ -2011,6 +2011,7 @@ rename_desc=This form can be used to change the domain name of an existing virtu
 rename_desc2=You can also change the home directory or administrative username without changing the domain name at all.
 rename_header=Virtual server domain name change options
 rename_domain=Old domain name
+rename_xndomain=International domain name
 rename_new=New domain name
 rename_user=Change administration username?
 rename_user0=Leave as $1
