@@ -35,7 +35,7 @@ if ($in{'group_mode'}) {
 	}
 
 # Make sure new domain is valid
-local $derr = &valid_domain_name($parentdom, $in{'new'});
+local $derr = &allowed_domain_name($parentdom, $in{'new'});
 &error($derr) if ($derr);
 
 # Make sure no domain with the same name already exists
